tests/ft/type_checking/valid/variables.jk
a = 15
mut b = 14
b = 15
b = a
