tests/ft/type_checking/invalid/var.jk
a = 15;
a = 14;

mut b = 14;
b = true;
